<resources>
    <string name="app_name">Parking Log</string>

    <string name="pol_number">Nomor Polisi</string>
    <string name="pol_number_hint">Masukan Nomor Polisi</string>

    <string name="brand_name">Merk Kendaraan</string>
    <string name="brand_name_hint">Masukan Merk Kendaraan</string>

    <string name="vehicle_color">Warna Kendaraan</string>
    <string name="vehicle_color_hint">Masukan Warna Kendaraan</string>

    <string name="parking_time">Waktu Parkir</string>
    <string name="parking_time_hint">Masukan Waktu Parkir (Jam)</string>

    <string name="type_vehicle">Tipe Kendaraan : </string>
    <string name="cars">Mobil</string>
    <string name="motorcycles">Motor</string>
    <string name="daftar_kendaraan">Daftar Kendaraan</string>

    <string name="save">Simpan</string>
    <string name="share">Bagikan</string>

    <string name="pol_invalid">Nomor Polisi tidak boleh kosong.</string>
    <string name="brand_invalid">Nama Brand tidak boleh kosong.</string>
    <string name="color_invalid">Warna Kendaraan tidak boleh kosong.</string>
    <string name="time_invalid">Waktu Parking tidak boleh kosong.</string>
    <string name="type_invalid">Pilih Jenis Kendaraan.</string>

    <string name="delete_sukses">Data Berhasil Dihapus</string>

    <string name="total_biaya">Total Biaya Parkir</string>

    <string name="rupiah">Rp. 0</string>
    <string name="rupiah_x">Rp. %1$d</string>

    <string name="belum_ada_data">Belum ada data</string>

    <string name="history">History</string>

    <string name="waktu_x">Waktu Parkir %1$d jam</string>

    <string name="add">Tambah</string>

    <string name="check">Lihat</string>

    <string name="hapus_histori">Hapus Histori</string>

    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <string name="bagikan_template">No. Polisi: %1$s \nMerk Kendaraan: %2$s \nWarna Kendaraan: %3$s \nTotal Biaya Parkir: %4$s</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="description">Parking Log adalah sebuah aplikasi pencatatan parkir yang dirancang untuk memudahkan pengguna dalam mencatat dan mengelola informasi parkir. Dengan menggunakan aplikasi ini, pengguna dapat dengan mudah mencatat nomor polisi kendaraan, nama kendaraan, warna kendaraan, dan waktu parkir dalam hitungan jam.</string>

    <string name="message">%1$s diklik!</string>

    <string name="switch_layout">Ubah tampilan</string>

    <string name="koneksi_error">Koneksi error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data kendaraan otomatis</string>

    <string name="notif_title">Ada Kendaraan baru!</string>
    <string name="notif_text">Ayo lihat sekarang</string>

</resources>